# chumpy

./: pyproject.toml
chumpy/: __init__.py  ch.py
