[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chumpy"
dynamic = ["version"]
description = "Autodifferentiation tool for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Matthew Loper", email = "matt.loper@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7", 
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.8.1",
    "scipy>=0.13.0", 
    "six>=1.11.0",
]


[project.urls]
Homepage = "https://github.com/mattloper/chumpy"


[tool.hatch.build.targets.wheel]
packages = ["chumpy"]

[tool.hatch.version]
path = "chumpy/__version__.py"
